--- a/notatka/app/src/main/AndroidManifest.xml
+++ b/notatka/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".EditorActivity">
         </activity>
     </application>
 
