--- a/notatka/app/src/main/AndroidManifest.xml
+++ b/notatka/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".EditorActivity">
+        <activity
+            android:name=".EditorActivity"
+            android:parentActivityName=".controller.NoteListActivity">
         </activity>
     </application>
 
