Revert "implement 'new note' button 💌"
This reverts commit 3c0fcf55933567dbb327960c481d9d8a38f99824.

--- a/notatka/app/src/main/AndroidManifest.xml
+++ b/notatka/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".EditorActivity"
-            android:parentActivityName=".controller.NoteListActivity">
+        <activity android:name=".EditorActivity">
         </activity>
     </application>
 
